add the API url config file

--- a/index.html
+++ b/index.html
@@ -3,6 +3,8 @@
 <head>
 <meta charset="UTF-8" />
 	<title>Queen protection</title>
+	<!-- Load environment variables -->
+    <script src="js/env.js"></script>
 	<link rel="stylesheet" type="text/css" href="bootstrap-3.0.3-dist/css/bootstrap.min.css" />
 	<link rel="stylesheet" type="text/css" href="css/myStyle.css" />
 	<link rel="stylesheet" type="text/css" href="angularjs-datepicker/src/css/angular-datepicker.css" />
